--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -1,4 +1,17 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4a.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4a.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4a.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4a.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4a.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4a.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801927.md#1" target="_blank">【梁厨美食】黑豆雪耳帆立贝炖汤</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801927.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8-4-150x120.jpg" align ="left"></a>在这样冷冷的天气，来一碗有干贝的海水咸淡味，再搭配上蜜枣、核桃、黑豆的浓郁香甜，炖锅就在小火中慢慢释放出食材的精华，同时雪耳加助浓稠的质地，这样可口的炖汤岂有不能拢络家人那挑嘴的胃......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 7:15 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803964.md#1" target="_blank">为了让丈夫戒酒 墨西哥女子在酒里加料</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803964.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_158412602_Subscription_L-150x120.jpg" align ="left"></a>墨西哥一名女子为了让丈夫戒掉酗酒的毛病，竟然在酒里面加泻药。她试图让他相信，他是因为喝酒上瘾才会频繁腹泻。然而，在东窗事发之后，该名女子已遭警方拘留。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 1:42 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802999.md#1" target="_blank">日本特色书店（2）茑屋书店公寓</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7bb2d0c9ab7783a8335b21ef825b1b37-150x120.jpg" align ="left"></a>TSUTAYA BOOK APARTMENT由创立“茑屋书店”的ＣＣＣ集团（Culture Convenience Club）的TSUTAYA开设的新式设施，就位在新宿站旁边，是一个24小时营业的“放松空间”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 1:35 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803003.md#1" target="_blank">地毯应定期清洁 避免常见8误区</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803003.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ead7e966a6f01a_ttl7dayOvO_shutterstock_1430294426-150x120.jpg" align ="left"></a>坊间流传许多清洁地毯的小技巧。事实上这些技巧中，有许多反而会把情况越弄越糟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 10:58 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803359.md#1" target="_blank">牙龈红肿发炎怎么办？中医荐1种食物和3味中药</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803359.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Inflammation-of-the-gums-food_697827745-150x120.jpg" align ="left"></a>牙龈肿痛、发炎，不只是口腔的问题，以中医观点来讲，这跟脏腑经络有关系。上牙龈属于足阳明胃经，下牙龈属于手阳明大肠经，若上下牙龈皆痛，通常跟肾虚有关。实火属于急性发炎，症状往往来得快，且持续疼痛。虚火属于慢性发炎，牙龈肿痛时好时坏， 迁延日久。牙龈发炎，中医如何治疗？改善牙龈发炎的1种食物和3味中药：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:57 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11799177.md#1" target="_blank">醋清肠排毒解便秘！这3个时间喝更好</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11799177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/vinegar-benefit-200118-150x120.jpg" align ="left"></a>食醋有清肠排毒、改善便秘等功效。一天三个时间喝醋，对身体有益。但必须知道的是，喝醋有一些注意事项。《本草纲目》记载：“醋能消肿、散水汽、杀邪毒、理诸药。”醋中含有多种氨基酸和有机酸，对人体非常有益。不同时间喝醋，效果也各异。食醋分为化学合成醋、混和醋和酿造醋。醋并非人都适合，合理方法饮用，才能达到预期的效果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 4:37 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790375.md#1" target="_blank">工作繁忙脑袋卡关 2诀窍保持高超工作效率</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/120718151848100445-150x120.jpg" align ="left"></a>活用“以两成付出，创造八成价值”的帕累托法则（Pareto principle）。只要仔细观察，将发现两成时间创造八成价值的情形，其实相当之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 10:56 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789610.md#1" target="_blank">辩证疗法快速减鼾治鼾</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789610.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6994f0d239cfac976c71974d7c4d3163-150x120.jpg" align ="left"></a> 临床上根据疾病的主要表现和特征，来诊断疾病的过程则称为“辨病”。“病”和“证”的确定，都是以症状为依据的。一病可以出现多证，一证可见于多病之中。因此，临床上必须把“辩证”与“辨病”相结合，这样诊断就会准确。 中医历代医家的辩证医学，是通过长期临床实践，逐渐发展而成，辩证领域很广，举例来说，有：“病因”辩证、“气血津液.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 6:22 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801134.md#1" target="_blank">品味Chingunae特色烤猪排</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801134.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1aefe21676a6812ad365d3c7edf0e9e6-150x120.jpg" align ="left"></a>来Chingunae餐厅吃饭，不仅可以享受美味可口的菜肴，安适、友善而温暖的氛围，更让人有一种置身于韩国的感觉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 1:33 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800191.md#1" target="_blank">林黛玉一年只能睡好10天？贫血易致缺氧和失眠</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800191.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/sleep-anemia_1013703874-150x120.jpg" align ="left"></a>林黛玉可能有贫血导致的缺氧型失眠的问题。会讨论到林黛玉是否有缺氧型失眠问题的话题，是来自于一位自称“林黛玉”的读者。这位“现代林黛玉”小姐，从小又体弱多病、气血不足，所以也就有了林黛玉的绰号。而这“现代林黛玉”有经常失眠问题，不管是中医或西医治疗都没有长期的效果。能否顺利进入睡眠，其实取决于身体的血氧获取程度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 12:58 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800999.md#1" target="_blank">【梁厨美食】煎鲈鱼柳配无花果汁酱</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8-2-150x120.jpg" align ="left"></a>这次介绍的菜肴，适合佳节享用，鲈鱼营养丰富，能让一家老小身体健康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 10:44 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800859.md#1" target="_blank">德国饮食传统 (5) ：德国面包的5个小知识</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800859.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-461627142-150x120.jpg" align ="left"></a>面包是最让德国人引以为傲的饮食文化！德国人爱吃面包，平均每人一年要吃下60公斤的面包，而沉重致密的德国面包，更是德国文化传承的一部分，体现了他们应对大自然的坚韧与智慧。以下，我们整理了德国面包最有趣的五个小知识，如果你喜欢德国文化或热爱面包，千万别错过！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 10:04 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800385.md#1" target="_blank">美国白狗生了8只小狗 有一只竟是绿色的</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800385.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_1423575533-150x120.jpg" align ="left"></a>美国北卡罗来纳州一只白色母狗最近产下一窝小狗，共有8只，但其中却有一只是淡黄绿色的。它的主人于是用漫威漫画中的超级英雄绿巨人浩克（Hulk）的名字来称呼它。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800381.md#1" target="_blank">日本特色书店（1）HOHOHO 座 净土寺店</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800381.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/c7b1addec0f2c551958836b714bb1e74-150x120.jpg" align ="left"></a>前言：如果你爱旅行，爱日本，爱书，爱书店……，就让阅读职人带你走入日本当地的特色书店，感受最独特的人情故事。献给旅行时一定会逛书店的“书店职人”、“出版业工作者”、“爱书人”。
 ホホホ座 浄土寺店 （HOHOHO 座 净土寺店）
 提到“外墙酷似悬崖、半辆Mini Cooper 突出墙外的独特外观”， 每位爱书人应该.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:28 PM			</td></tr>
@@ -17,20 +30,15 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11797814.md#1" target="_blank">退休金账户成骇客目标  该如何自保？</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11797814.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-621678752-150x120.jpg" align ="left"></a>随着金融机构网路安全的加强，破解银行防火墙越来越困难。许多骇客开始将目标转向个人，借着钓鱼邮件窃取个人资料，来冒领退休金。即使整体来说，网路诈欺案件已日益减少，然而，与退休金账户相关的诈欺案却日渐增加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 7:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11797429.md#1" target="_blank">全长6.5公里 世界最长蛋糕在印度出炉</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11797429.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193888841-150x120.jpg" align ="left"></a>印度上千名烘焙师傅与厨师在周三（1月15日）联手做出一条6.5公里长的蛋糕，号称全世界最长。如经吉尼斯世界纪录（Guinness World Records）证实，这将打破中国在2018年创下的这项纪录。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 4:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11796907.md#1" target="_blank">房价下跌 大温住房建设创历史记录</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11796907.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/9fa5073f35fe69bcd6d7d8f40e073af6-150x120.jpg" align ="left"></a>加拿大住房抵押贷款公司(CMHC)报告称，2019年，Metro的开发商新开工28,141套住房，比2018年增加了20%，其中相当一部分是专门建造的租赁单元，约6,727套。就在CMHC发布报告的同一天，专业房地产公司发布了最新的房价调查。该调查显示，2019年第四季度，整个地区的总房价下降了4.8%，但市场销售出现.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 3:58 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793464.md#1" target="_blank">颈椎不好百病生！常做2个动作 远离颈椎病</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793464.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Cervical-spondylosis0-200115-150x120.jpg" align ="left"></a>常常感觉到手部有莫名其妙的酸麻无力感，并且肩颈僵硬吗？是否反复落枕，甚至常常头痛、头晕？小心颈椎病已找上你！当颈椎出问题，血管和神经被压迫，此时不只引发脖子酸痛，还可能导致各种各样、甚至看似和颈椎毫不相关的病症出现。比如视力模糊、头晕头痛。平时可揉捏一些穴道放松肩颈肌肉，缓解颈椎病。2个简单运动，帮助缓解颈椎病......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 2:12 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11797024.md#1" target="_blank">英男在健身房展示自行车特技 没人像他这样</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11797024.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_98766378_Subscription_L-150x120.jpg" align ="left"></a>英国极限单车运动好手麦卡斯基尔（Danny MacAskill）每隔一段时间都会推出新作，以展现他驾驭自行车的高超技术，每每受到网民的青睐。在新年伊始，他推出一部在健身房拍摄的短片，让人们看得赞叹不已。有一点可以肯定的是，一般人绝对不会像他这样做运动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 1:35 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794605.md#1" target="_blank">为什么日本有些楼梯有红色和黄色记号？</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794605.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1146157732-150x120.jpg" align ="left"></a>如果你注意观察的话，你会发现日本某些公共场所的楼梯标示有红色和黄色记号。这个看似平凡的记号，却是个便民措施，但包括日本人在内，有很多人还不知道它的功用。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 1:29 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796301.md#1" target="_blank">味噌是盐的绝佳替代品 对抗高血压 还避免肥胖</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796301.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_1441697945-150x120.jpg" align ="left"></a>越来越多西方医师与营养师认为，要对抗高血压，最简单的一种方式就是低盐饮食。味噌是盐的绝佳替代品，而且用味噌代替盐分还可减少脂肪、热量摄取，避免肥胖。味噌的平均含盐量仅有12%，加上它本身已有丰富的口感，可赋予食物相当好的滋味与芳香。所以用味噌调味，不仅能大量降低盐的用量，也比光用盐调味的食物更美味。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 6:11 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795710.md#1" target="_blank">多伦多去年房价均涨5.5万 近普通人年收入</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11795710.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20334206-150x120.jpg" align ="left"></a>大多伦多地区房市经历2018年低迷后，去年开始复苏，房价涨幅再次超多数家庭年入涨幅。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 11:35 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794838.md#1" target="_blank">美得像一幅画 日本爸自学做出绝美生鱼片摆盘</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794838.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/28ab9a1e59b543546f42e5fa02f26403-150x120.jpg" align ="left"></a>当他尝试使用河豚之外的鱼种诸如生鲑鱼片，鲷鱼，比目鱼和金枪鱼片生鱼片摆盘时，由于鱼的肉质，鱼皮 呈现出不同的色泽、花纹和透明度；爆发出他创作的热情和火花。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 9:56 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792330.md#1" target="_blank">写实3D蛋糕真的能吃吗？甜点师一刀切给你看</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6272e02c0042e5c9f2e63a00a1e2a176-150x120.jpg" align ="left"></a>被称为艺术蛋糕的造型蛋糕已风行多年，然而，时至今日蛋糕师们有了更多的创意，做出千变万化、让人目不睱给的作品；国外一位本·库伦（Ben Cullen）的网友，他更是创意大爆发，做出很多超乎人们想像力的蛋糕作品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 9:42 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792421.md#1" target="_blank">8岁孩精壮腹肌怎么练出来的？他是体坛明日之星</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/07107b22d2e5b83b137a2a5938af5128-150x120.jpg" align ="left"></a>8岁的鲁道夫有精壮腹肌让人叹为观止，有人说看到他的腹肌，不禁令人心生敬畏！然而那么小的儿童怎么会练出那一身羡煞许多人的腹肌呢？不只是腹肌，他还被称为“世界上最快的孩子”！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 9:23 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794946.md#1" target="_blank">新型放射疗法瞬间杀死肿瘤 却不伤健康组织</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794946.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/radiation_366474557-150x120.jpg" align ="left"></a>新型“瞬间放射疗法”技术，将传统放射疗法几周内向患者照射的辐射量，在几百毫秒的瞬间一次性照射在肿瘤上，成功使癌细胞凋亡，而健康细胞却不受损。目前对小鼠身上较小的肿瘤实验成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 6:01 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794941.md#1" target="_blank">在办公桌上吃午餐不利健康</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794941.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/l4saLre9-150x120.jpeg" align ="left"></a>医疗服务公司BUPA数据显示，约三分之一的英国上班族习惯在办公桌上吃午饭。43%说太忙没时间离开电脑吃饭。另一份来自隐形眼镜商AcuVue的调查显示，现代人均每年有1700个小时在电脑前度过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 5:58 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794448.md#1" target="_blank">美国俄亥俄州天空出现橘红色闪光 原因不明</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794448.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_129616220-150x120.jpg" align ="left"></a>星期天（1月12日）晚上，美国俄亥俄州的天空出现多次橘红色闪光，其亮度足以照亮大半个天空，但有关当局无法确定其成因为何。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:45 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794416.md#1" target="_blank">没时间去健身房？20款健身app充当私人教练</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794416.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/Pilates_1303193914-150x120.jpg" align ="left"></a>如今我们可以充分利用现代科技的便捷，远端观看健身教练们的动作示范。与其因为以上原因而放弃健身计划，不如使用我们为您推荐的这几款备受专业人士好评的健身app，让手机充当您的私人教练，随时对自己的锻炼进程了若指掌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:41 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793729.md#1" target="_blank">跑马拉松让血管年轻4岁！医师教你跑步诀窍</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/marathon_641673166-150x120.jpg" align ="left"></a>英国研究发现，马拉松新手经过6个月的训练后，血管年轻4岁，还降低了心脏病和中风发作的风险。初次参与马拉松的跑者，陈冠诚建议最好在比赛前一年就开始训练，例如计划明年参与马拉松，今年就开始练跑。训练要循序渐进，从平常能接受的强度逐渐增加跑步里程，每周增加10％。无论是平常的练跑或是马拉松比赛当天，都要随时补充水分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:37 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793982.md#1" target="_blank">德国饮食传统 (4) ：豪迈的啤酒文化</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793982.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1038282434-150x120.jpg" align ="left"></a>啤酒是德国文化中不可或缺的一部分。据统计，德国有超过1500间啤酒厂，年产量近90亿公升。平均每个德国人，一年要喝下超过100公升的啤酒。究竟，啤酒为何会成为德国重要的特产呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:01 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793809.md#1" target="_blank">订购绿色快递！ 6间线上园艺商店推荐</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793809.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_1023699787-150x120.jpg" align ="left"></a>现在购买盆栽，不一定需要大老远跑到园艺店里，有许多优质、可靠的线上园艺商店，提供了快递到府的服务，让我们随时可以帮自己订购一份“绿色快递”。以下是我们推荐的六间线上商店，希望你能从中选到喜爱的植物伙伴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:44 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803462.md#1" target="_blank">汽车维修问与答：开车时方向盘为何抖动</a><br></h3>汽车维修问与答
+
+读者Helena问：Dear?Mr. Lee,
+
+You are great in helping my husband Dennis to solve the car problem last year and hope you can help me with my car this ti.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:44 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803441.md#1" target="_blank">了解日本汽车的制造技术</a><br></h3>在全世界，众所周知的事实是美国人都喜欢自己国家的汽车。几十年来，美国人绝大多数都选择了美国的三大汽车制造商的汽车，通用汽车、福特和克莱斯勒来满足他们的需求。
+
+&nbsp;
+
+福特汽车通过将汽车生产装配线自动化彻底改变了汽车制造业。这种技术适应于大量生产同一种类型的车辆（甚至颜色最好也要相同）。这样可以使工人尽.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/crlhi259/djy/blob/master/gb/news2008_2.md#1<br><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/news2008_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_2.htm">http://www.epochtimes.com/gb/news2008_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
